<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">AS</string>
    <string name="todo">TODO</string>
    <string name="sikdan_text">식단</string>
    <string name="home_icon">홈</string>
    <string name="sikdan_make">식단 구성</string>
    <string name="sikdan_make1">식단 구성</string>
    <string name="sikdan_calender">식단 캘린더</string>
    <string name="sikdan_list">식단 목록</string>
    <string name="sikdan_home">운동</string>
    <string name="sikdan_sikdan">식단</string>
    <string name="sikdan_report">기록</string>
    <string name="sikdan_mypage">마이페이지</string>
    <string name="dan">단백질</string>
    <string name="tan">탄수화물</string>
    <string name="ji">지방</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>