<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/sikdan_make"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="@drawable/sikdan_make"
        android:padding="16dp"
        android:src="@drawable/sikdan_make"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/buttonNav"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.2"
        app:layout_constraintHorizontal_bias="0.5" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="457dp"
        android:layout_height="53dp"
        android:background="@color/background"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="0hdp" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sikdan_text"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="7dp"
        tools:layout_editor_absoluteY="7dp" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/buttonNav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="#1F1E1E"
        app:itemIconTint="#FFFFFF"
        app:itemTextColor="#FFFFFF"
        app:menu="@menu/bottom_nav_menu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <android.widget.Button
        android:id="@+id/dan"
        android:layout_width="159dp"
        android:layout_height="58dp"
        android:layout_marginStart="144dp"
        android:background="@drawable/button_style"
        android:backgroundTint="@color/content"
        android:text="@string/dan"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/buttonNav"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.457" />

    <android.widget.Button
        android:id="@+id/tan"
        android:layout_width="159dp"
        android:layout_height="58dp"
        android:layout_marginStart="144dp"
        android:background="@drawable/button_style"
        android:backgroundTint="@color/content"
        android:text="@string/tan"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/buttonNav"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.596" />

    <android.widget.Button
        android:id="@+id/ji"
        android:layout_width="159dp"
        android:layout_height="58dp"
        android:layout_marginStart="144dp"
        android:background="@drawable/button_style"
        android:backgroundTint="@color/content"
        android:text="@string/ji"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/buttonNav"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.758" />

</androidx.constraintlayout.widget.ConstraintLayout>